--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/storage": "2.2.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "lodash": "^4.17.11",
     "promise-polyfill": "^8.1.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
+    "@types/lodash": "^4.14.120",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
